--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -53,12 +53,19 @@
 }
 
 .banner{
-  padding-top: 8%;
-  padding-bottom: 8%;
   background-image: url('../../assets/background.png');
   background-size: cover;
   width: 100%;
   min-height: 450px;
+}
+.banner__top-spacer{
+  height: 175px;
+}
+.banner__middle-spacer{
+  height: 42px;
+}
+.banner__bottom-spacer{
+  height: 24px;
 }
 .banner__text{
   font-family: Montserrat-Bold;
@@ -68,10 +75,6 @@
   text-shadow: 0 2px 4px rgba(0,0,0,0.50);
   text-transform: uppercase;
   text-align: center;
-
-  margin-top: 130px;
-  margin-bottom: 80px;
-
   margin-left: 6vw;
   margin-right: 6vw;
 
